--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "web-template",
-  "version": "1.0.0",
-  "description": "Start HTML Template",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Oleg Mishutin",
-  "license": "ISC",
+  "name": "pink",
+  "version": "0.1.0",
+  "private": true,
+  "description": "Личный проект «Пинк» от HTML Academy",
   "devDependencies": {
-    "browser-sync": "^2.18.5",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-cache": "^0.4.5",
-    "gulp-clean-css": "^2.3.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-notify": "^2.2.0",
+    "autoprefixer": "6.7.x",
+    "browser-sync": "2.18.8",
+    "gulp": "3.9.1",
     "gulp-plumber": "1.1.0",
     "gulp-postcss": "6.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.0.0",
-    "gulp-svgmin": "^1.2.3",
-    "gulp-svgstore": "^6.1.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "node-bourbon": "^4.2.8",
-    "vinyl-ftp": "^0.5.0"
+    "gulp-sass": "3.1.0",
+    "@htmlacademy/editorconfig-cli": "0.1.x"
+  },
+  "scripts": {
+    "test": "editorconfig-cli",
+    "build": "gulp style",
+    "start": "gulp serve"
+  },
+  "editorconfig-cli": [
+    "*.html",
+    "*.json",
+    "*.js",
+    "js/**/*.js",
+    "img/**/*.svg",
+    "sass/**/*.{sass,scss}"
+  ],
+  "engines": {
+    "node": "6.10"
   }
 }
