--- a/package.json
+++ b/package.json
@@ -2,30 +2,37 @@
   "name": "pink",
   "version": "0.1.0",
   "private": true,
-  "description": "Личный проект «Пинк» от HTML Academy",
+  "description": "Pink project",
+  "main": "index.html",
+  "author": "Oleg Mishutin",
   "devDependencies": {
-    "autoprefixer": "6.7.x",
     "browser-sync": "2.18.8",
+    "css-mqpacker": "^5.0.1",
+    "del": "^2.2.2",
     "gulp": "3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.5",
+    "gulp-clean-css": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^3.0.0",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "1.1.0",
-    "gulp-postcss": "6.2.0",
-    "gulp-sass": "3.1.0",
+    "gulp-postcss": "6.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.0.0",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.1.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "node-bourbon": "^4.2.8",
+    "vinyl-ftp": "^0.5.0",
+    "run-sequence": "^1.2.2",
     "@htmlacademy/editorconfig-cli": "0.1.x"
   },
   "scripts": {
     "test": "editorconfig-cli",
-    "build": "gulp style",
-    "start": "gulp serve"
-  },
-  "editorconfig-cli": [
-    "*.html",
-    "*.json",
-    "*.js",
-    "js/**/*.js",
-    "img/**/*.svg",
-    "sass/**/*.{sass,scss}"
-  ],
-  "engines": {
-    "node": "6.10"
+    "build": "gulp build",
+    "start": "npm run build && gulp serve"
   }
 }
