--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-.DS_Store
-.idea
-*.ai
-*.log
-*.pdf
-*.psd
-*.sublime*
-css/*.css
-node_modules/
-Thumbs.db
+/.idea/
+/node_modules/
+/dist/
+/build/
+/app/css/
+/**/*.ai
+/**/*.log
+/**/*.pdf
+/**/*.psd
+/**/*.sublime*
+/**/Thumbs.db
+/**/.DS_Store
